auth pages update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://res.cloudinary.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>⚝ Stargazer </title>
+    <title>Gothic & Alternative Clothing | Stargazer</title>
   </head>
   <body>
     <div id="root"></div>
